--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,13 @@
-.app-containe{
-    background-color: green;
+.app-container{
+    background-color: grey;
     
+}
+
+#app-container1{
+    display: flex;
+    /* flex-direction: column;  */
+}
+
+#add-task-btn{
+    margin-top: 1rem;;
 }
