--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,44 @@
-.app-container{
-    background-color: grey;
-    
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f8f9fa;
+  margin: 0;
+  padding: 30px;
+  justify-content: center;
 }
+
 
 #app-container1{
     display: flex;
-    /* flex-direction: column;  */
 }
+
+.app-container {
+  background: grey;
+  padding: 20px 30px;
+  border-radius: 10px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  width: 800px;
+  height: 100%;
+}
+
+#task-form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+  align-items: end;
+  margin-bottom: 12px;
+}
+
+h2 {
+  text-align: center;
+  color: #333;
+}
+
+input, select {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
 
 #add-task-btn{
     margin-top: 1rem;;
